--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "10.14.2"
+    "node": "12.13.0",
+    "npm": "6.12.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
