--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "wine journal app",
   "main": "server.js",
   "engines": {
-    "node": "10.14.2",
-    "npm": "6.10.1"
+    "node": "12.13.0",
+    "npm": "6.12.0"
   },
   "scripts": {
     "client-install": "npm install --prefix client",
@@ -28,6 +28,7 @@
     "mongoose": "^5.6.5",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "npm": "^6.13.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.3.0"
