--- a/client/package.json
+++ b/client/package.json
@@ -2,23 +2,20 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "12.13.0"
-  },
   "dependencies": {
-    "axios": "^0.21.1",
-    "classnames": "^2.2.6",
-    "jwt-decode": "^2.2.0",
-    "moment": "^2.22.2",
-    "npm-run-all": "^4.1.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.2",
-    "react-moment": "^0.7.9",
-    "react-redux": "^5.0.7",
+    "axios": "^0.26.1",
+    "classnames": "^2.3.1",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
+    "npm-run-all": "^4.1.5",
+    "react": "^17.0.2",
+    "react-dom": "^16.14.0",
+    "react-moment": "^1.1.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start-js": "react-scripts start",
@@ -28,6 +25,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
-  "devDependencies": {}
+  "proxy": "http://localhost:5000"
 }
