--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "BROWSER='Firefox Developer Edition' concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Joseph Hofmeister",
@@ -19,20 +19,22 @@
   "dependencies": {
     "@ionic/app-scripts": "^3.2.4",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "cloudinary": "^1.13.2",
+    "body-parser": "^1.19.2",
+    "cloudinary": "^1.28.1",
     "concurrently": "^3.6.1",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.7.5",
-    "multer": "^1.4.1",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.4.1",
+    "mongoose": "^5.13.14",
+    "multer": "^1.4.4",
     "multer-storage-cloudinary": "^2.2.1",
-    "npm": "^6.14.6",
-    "passport": "^0.4.0",
+    "npm": "^8.5.5",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5"
   }
 }
