--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "wjnew",
+  "name": "winejournal-new",
   "version": "1.0.0",
-  "description": "Updated version of wine journal web application.",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client-install": "npm install --prefix client",
+    "start": "node server/index.js",
+    "server": "nodemon server/index.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "concurrently": "^7.3.0",
     "express": "^4.18.1"
   },
