--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "concurrently": "^7.3.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
