--- a/.gitignore
+++ b/.gitignore
@@ -146,5 +146,5 @@ tokens/
 # pm2 configuration file
 ecosystem.config.js
 
-/config/keys_dev.js
-/config/cloud_keys_dev.js
+keys_dev.js
+cloud_keys_dev.js
